# material-color-utilities-py

./: .gitignore  README.md  pyproject.toml
material_color_utilities/: __init__.py
material_color_utilities/blend/: blend.py
material_color_utilities/hct/: cam16.py  hct.py
material_color_utilities/score/: score.py
material_color_utilities/utils/: color_utils.py  image_utils.py  math_utils.py  string_utils.py  theme_utils.py
material_color_utilities_python/quantize/: quantizer_celebi.py
material_color_utilities_python/utils/: color_utils.py  image_utils.py  math_utils.py
